--- a/packages/clawdhub/package.json
+++ b/packages/clawdhub/package.json
@@ -1,7 +1,7 @@
 {
   "name": "clawhub",
   "version": "0.4.0",
-  "description": "ClawHub CLI \\u2014 install, update, search, and publish agent skills.",
+  "description": "OpenClaw CLI \\u2014 install, update, search, and publish agent skills.",
   "license": "MIT",
   "type": "module",
   "bin": {
